--- a/new/HashMapSearchEngine/pom.xml
+++ b/new/HashMapSearchEngine/pom.xml
@@ -38,6 +38,11 @@
 	</dependencies>
 
 	<build>
+	    <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.1.0</version>
+        </plugin>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
