--- a/new/HashMapSearchEngine/pom.xml
+++ b/new/HashMapSearchEngine/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>QRCodeSearch</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>HashMapSearchEngine</name>
 	<description>QRCodeSearch Project</description>
 	<properties>
