--- a/new/HashMapSearchEngine/deploy-docker.yml
+++ b/new/HashMapSearchEngine/deploy-docker.yml
@@ -6,6 +6,10 @@
       yum:
         name: python-pip
         state: present
+    - name: Install docker
+      yum:
+        name: docker
+        state: present
     - name: install docker-py python module
       pip:
         name: docker-py
