--- a/new/HashMapSearchEngine/deploy-docker.yml
+++ b/new/HashMapSearchEngine/deploy-docker.yml
@@ -10,6 +10,11 @@
       yum:
         name: docker
         state: present
+    - name: start docker
+      service:
+        name: docker
+        state: started
+        enabled: yes
     - name: install docker-py python module
       pip:
         name: docker-py
