--- a/new/HashMapSearchEngine/Dockerfile
+++ b/new/HashMapSearchEngine/Dockerfile
@@ -1,4 +1,4 @@
 From tomcat:8
 # take the war and copy to webapps of tomcat
 
-COPY target/*.war /usr/local/tomcat/webapps/HashMapSearchEngine.war
+COPY target/*.war /usr/local/tomcat/webapps/QRCodeSearch-0.0.1-SNAPSHOT.war
